--- a/11ty-landing-page-main/src/_includes/navbar.njk
+++ b/11ty-landing-page-main/src/_includes/navbar.njk
@@ -14,6 +14,6 @@
     <a class="text-gray-800 font-bold hover:text-purple-600 text-lg text-center w-full no-underline sm:w-auto sm:px-4 py-2 sm:py-1"
       href="{% if isFront %}#features{% else %}{{ site.baseURL }}/#features{% endif %}">Ervaring</a>
     <a class="text-gray-800 border border-indigo-800 text-lg bg-gray-100 rounded-full w-auto no-underline text-center sm:text-left hover:border-purple-600 hover:text-purple-600 hover:bg-white hover:shadow-md px-6 py-1 my-2 sm:my-0 sm:ml-4"
-      href="{% if isFront %}#register{% else %}{{ site.baseURL }}/#register{% endif %}">Contacteer ons</a>
+      href="mailto:loebasstudios@gmail.com">Contacteer ons</a>
   </div>
 </nav>
