--- a/11ty-landing-page-main/src/_includes/section.header.njk
+++ b/11ty-landing-page-main/src/_includes/section.header.njk
@@ -16,7 +16,7 @@
           <li class="content__container__list__item xl:pl-3">herzien van uw systemen</li>
         </ul>
       </span>
-      <p class="font-bold tracking-widest text-4xl">... opgestart door 3 studenten uit Hasselt.</p>
+      <p class="font-bold tracking-widest text-4xl">... opgestart door 3 studenten uit Diest.</p>
     </div>
     <div class="w-full sm:w-1/2">
       <img src="/img/undraw_Friends_online_re_r7pq.svg" alt="AWE.SOME header">
