first draft teamSection, topnavbar big text

--- a/budo-site/src/TeamSection.css
+++ b/budo-site/src/TeamSection.css
@@ -21,7 +21,8 @@
 }
 
 .photo{
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
     margin-left: 10;
     height: 100px;
 }
